--- a/index.html
+++ b/index.html
@@ -20,67 +20,67 @@
 
   <body>
     <header>
-      <div class="header-inner">
-        <a class="header-inner__subcribe" href="#"><span>Subscribe</span></a>
-      </div>
-      <div class="nav-bar">
-        <p class="nav-bar__title">
-          <svg
-            height="50"
-            viewBox="0 0 400 75"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <g fill="currentColor">
-              <!-- Logotype: PURE FARCE -->
-              <text
-                x="0"
-                y="52"
-                font-family="Georgia, 'Times New Roman', serif"
-                font-size="52"
-                font-weight="900"
-                letter-spacing="-1.5"
-              >
-                PURE FARCE
-              </text>
+      <div class="header__inner">
+        <a class="header__cta" href="#"><span>Subscribe</span></a>
+        <div class="nav-bar">
+          <p class="nav-bar__title">
+            <svg
+              height="50"
+              viewBox="0 0 400 75"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <g fill="currentColor">
+                <!-- Logotype: PURE FARCE -->
+                <text
+                  x="0"
+                  y="52"
+                  font-family="Georgia, 'Times New Roman', serif"
+                  font-size="52"
+                  font-weight="900"
+                  letter-spacing="-1.5"
+                >
+                  PURE FARCE
+                </text>
 
-              <!-- Logotype: NEWS -->
-              <text
-                x="322"
-                y="50"
-                font-family="Arial, Helvetica, sans-serif"
-                font-size="18"
-                font-weight="300"
-                letter-spacing="6"
-              >
-                NEWS
-              </text>
+                <!-- Logotype: NEWS -->
+                <text
+                  x="322"
+                  y="50"
+                  font-family="Arial, Helvetica, sans-serif"
+                  font-size="18"
+                  font-weight="300"
+                  letter-spacing="6"
+                >
+                  NEWS
+                </text>
 
-              <!-- Traditional Newspaper Rules -->
-              <rect x="2" y="62" width="398" height="2.5" />
-              <rect x="2" y="68" width="398" height="0.75" />
-            </g>
-          </svg>
-        </p>
-        <nav class="nav-bar__topics">
-          <div class="nav-bar__track">
-            <ul class="nav-bar__list">
-              <li class="nav-bar__item">
-                <a href="#" class="nav-bar__link">Placeholder</a>
-              </li>
-              <li class="nav-bar__item">
-                <a href="#" class="nav-bar__link">Placeholder</a>
-              </li>
+                <!-- Traditional Newspaper Rules -->
+                <rect x="2" y="62" width="398" height="2.5" />
+                <rect x="2" y="68" width="398" height="0.75" />
+              </g>
+            </svg>
+          </p>
+          <nav class="nav-bar__topics">
+            <div class="nav-bar__track">
+              <ul class="nav-bar__list">
+                <li class="nav-bar__item">
+                  <a href="#" class="nav-bar__link">Placeholder</a>
+                </li>
+                <li class="nav-bar__item">
+                  <a href="#" class="nav-bar__link">Placeholder</a>
+                </li>
 
-              <li class="nav-bar__item">
-                <a href="#" class="nav-bar__link">Placeholder</a>
-              </li>
+                <li class="nav-bar__item">
+                  <a href="#" class="nav-bar__link">Placeholder</a>
+                </li>
 
-              <li class="nav-bar__item">
-                <a href="#" class="nav-bar__link">Placeholder</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
+                <li class="nav-bar__item">
+                  <a href="#" class="nav-bar__link">Placeholder</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        </div>
       </div>
     </header>
     <div>
@@ -96,175 +96,177 @@
           <p>Breaking news - Canada remembers it exists!</p>
         </div>
       </div>
-      <main class="main--two-column">
-        <div class="main__content">
-          <div class="mx-auto classified classified--media-only">
-            <figure class="classified__media">
-              <img
-                src="https://placehold.co/600x400"
-                alt="Product"
-                class="classified__image"
-              />
-            </figure>
-            <div class="classified__content">
-              <p class="classified__title">Premium Services</p>
-              <p class="classified__description">
-                Unlock full access to our suite of professional tools designed
-                for your growth.
-              </p>
-              <a href="#" class="classified__cta">Upgrade Now</a>
-            </div>
-          </div>
-          <div class="article-container">
-            <article class="article article--featured">
-              <div class="article__image-wrapper">
+      <main>
+        <div class="main__inner main--two-column">
+          <div class="main__content">
+            <div class="mx-auto classified classified--media-only">
+              <figure class="classified__media">
                 <img
-                  class="article__image"
-                  src="images/placeholderFallout.webp"
-                  alt="Alt text for an image in this article, if I choose to include an image."
-                  title="FEATURED placeholder information that will BLOW YOUR MIND!"
+                  src="https://placehold.co/600x400"
+                  alt="Product"
+                  class="classified__image"
                 />
+              </figure>
+              <div class="classified__content">
+                <p class="classified__title">Premium Services</p>
+                <p class="classified__description">
+                  Unlock full access to our suite of professional tools designed
+                  for your growth.
+                </p>
+                <a href="#" class="classified__cta">Upgrade Now</a>
               </div>
+            </div>
+            <div class="article-container">
+              <article class="article article--featured">
+                <div class="article__image-wrapper">
+                  <img
+                    class="article__image"
+                    src="images/placeholderFallout.webp"
+                    alt="Alt text for an image in this article, if I choose to include an image."
+                    title="FEATURED placeholder information that will BLOW YOUR MIND!"
+                  />
+                </div>
 
-              <h2 class="article__title article-list__title">
-                Featured Article Title
-              </h2>
+                <h2 class="article__title article-list__title">
+                  Featured Article Title
+                </h2>
 
-              <details>
-                <summary>Read more</summary>
-                <p>Article paragraph</p>
-              </details>
-            </article>
-            <!-- Grid of News Articles -->
-            <section class="section-heading">
-              <h2 class="section-heading__title">Section Header</h2>
-              <div class="article-list">
-                <article class="article article--small">
-                  <h3 class="article__title">Article Title</h3>
-                  <details>
-                    <summary>Read more</summary>
-                    <div class="article__image-wrapper">
-                      <img
-                        class="article__image"
-                        src="images/placeholderFallout.webp"
-                        alt="Alt text for an image in this article, if I choose to include an image."
-                        title="Placeholder secrets the ELITE don't want you to know!"
-                      />
-                    </div>
+                <details>
+                  <summary>Read more</summary>
+                  <p>Article paragraph</p>
+                </details>
+              </article>
+              <!-- Grid of News Articles -->
+              <section class="section-heading">
+                <h2 class="section-heading__title">Section Header</h2>
+                <div class="article-list">
+                  <article class="article article--small">
+                    <h3 class="article__title">Article Title</h3>
+                    <details>
+                      <summary>Read more</summary>
+                      <div class="article__image-wrapper">
+                        <img
+                          class="article__image"
+                          src="images/placeholderFallout.webp"
+                          alt="Alt text for an image in this article, if I choose to include an image."
+                          title="Placeholder secrets the ELITE don't want you to know!"
+                        />
+                      </div>
 
-                    <p>Article Paragraph</p>
-                    <div class="article__image-wrapper">
-                      <img
-                        class="article__image"
-                        src="images/articles/ai_slop_ui.webp"
-                      />
-                    </div>
-                  </details>
-                </article>
-                <article class="article article--small">
-                  <h3 class="article__title">Article Title</h3>
+                      <p>Article Paragraph</p>
+                      <div class="article__image-wrapper">
+                        <img
+                          class="article__image"
+                          src="images/articles/ai_slop_ui.webp"
+                        />
+                      </div>
+                    </details>
+                  </article>
+                  <article class="article article--small">
+                    <h3 class="article__title">Article Title</h3>
 
-                  <details>
-                    <summary>Read more</summary>
-                    <div class="article__image-wrapper">
-                      <img
-                        class="article__image"
-                        src="images/placeholderFallout.webp"
-                        alt="Alt text for an image in this article, if I choose to include an image."
-                        title="Placeholder secrets the ELITE don't want you to know!"
-                      />
-                    </div>
+                    <details>
+                      <summary>Read more</summary>
+                      <div class="article__image-wrapper">
+                        <img
+                          class="article__image"
+                          src="images/placeholderFallout.webp"
+                          alt="Alt text for an image in this article, if I choose to include an image."
+                          title="Placeholder secrets the ELITE don't want you to know!"
+                        />
+                      </div>
 
-                    <p>Article Paragraph</p>
-                    <div class="article__image-wrapper">
-                      <img
-                        class="article__image"
-                        src="images/articles/ai_slop_ui.webp"
-                      />
-                    </div>
-                  </details>
-                </article>
-                <article class="article article--small">
-                  <h3 class="article__title">Article Title</h3>
+                      <p>Article Paragraph</p>
+                      <div class="article__image-wrapper">
+                        <img
+                          class="article__image"
+                          src="images/articles/ai_slop_ui.webp"
+                        />
+                      </div>
+                    </details>
+                  </article>
+                  <article class="article article--small">
+                    <h3 class="article__title">Article Title</h3>
 
-                  <details>
-                    <summary>Read more</summary>
-                    <div class="article__image-wrapper">
-                      <img
-                        class="article__image"
-                        src="images/placeholderFallout.webp"
-                        alt="Alt text for an image in this article, if I choose to include an image."
-                        title="Placeholder secrets the ELITE don't want you to know!"
-                      />
-                    </div>
+                    <details>
+                      <summary>Read more</summary>
+                      <div class="article__image-wrapper">
+                        <img
+                          class="article__image"
+                          src="images/placeholderFallout.webp"
+                          alt="Alt text for an image in this article, if I choose to include an image."
+                          title="Placeholder secrets the ELITE don't want you to know!"
+                        />
+                      </div>
 
-                    <p>Article Paragraph</p>
-                    <div class="article__image-wrapper">
-                      <img
-                        class="article__image"
-                        src="images/articles/ai_slop_ui.webp"
-                      />
-                    </div>
-                  </details>
-                </article>
+                      <p>Article Paragraph</p>
+                      <div class="article__image-wrapper">
+                        <img
+                          class="article__image"
+                          src="images/articles/ai_slop_ui.webp"
+                        />
+                      </div>
+                    </details>
+                  </article>
+                </div>
+              </section>
+            </div>
+            <div class="mx-auto classified">
+              <figure class="classified__media">
+                <img
+                  src="https://placehold.co/600x400"
+                  alt="Product"
+                  class="classified__image"
+                />
+              </figure>
+              <div class="classified__content">
+                <p class="classified__title">Premium Services</p>
+                <p class="classified__description">
+                  Unlock full access to our suite of professional tools designed
+                  for your growth.
+                </p>
+                <a href="#" class="classified__cta">Upgrade Now</a>
               </div>
-            </section>
-          </div>
-          <div class="mx-auto classified">
-            <figure class="classified__media">
-              <img
-                src="https://placehold.co/600x400"
-                alt="Product"
-                class="classified__image"
-              />
-            </figure>
-            <div class="classified__content">
-              <p class="classified__title">Premium Services</p>
-              <p class="classified__description">
-                Unlock full access to our suite of professional tools designed
-                for your growth.
-              </p>
-              <a href="#" class="classified__cta">Upgrade Now</a>
             </div>
           </div>
+          <aside class="aside--extras">
+            <div class="classified classified--vertical">
+              <figure class="classified__media">
+                <img
+                  src="https://placehold.co/400x300"
+                  alt="Product"
+                  class="classified__image"
+                />
+              </figure>
+              <div class="classified__content">
+                <p class="classified__title">New Arrivals</p>
+                <p class="classified__description">
+                  The winter collection has arrived. Explore fresh styles and
+                  cozy fabrics.
+                </p>
+                <a href="#" class="classified__cta">Shop Collection</a>
+              </div>
+            </div>
+
+            <div class="classified classified--vertical classified--media-only">
+              <figure class="classified__media">
+                <img
+                  src="https://placehold.co/400x300"
+                  alt="Product"
+                  class="classified__image"
+                />
+              </figure>
+              <div class="classified__content">
+                <p class="classified__title">New Arrivals</p>
+                <p class="classified__description">
+                  The winter collection has arrived. Explore fresh styles and
+                  cozy fabrics.
+                </p>
+                <a href="#" class="classified__cta">Shop Collection</a>
+              </div>
+            </div>
+          </aside>
         </div>
-        <aside class="aside--extras">
-          <div class="classified classified--vertical">
-            <figure class="classified__media">
-              <img
-                src="https://placehold.co/400x300"
-                alt="Product"
-                class="classified__image"
-              />
-            </figure>
-            <div class="classified__content">
-              <p class="classified__title">New Arrivals</p>
-              <p class="classified__description">
-                The winter collection has arrived. Explore fresh styles and cozy
-                fabrics.
-              </p>
-              <a href="#" class="classified__cta">Shop Collection</a>
-            </div>
-          </div>
-
-          <div class="classified classified--vertical classified--media-only">
-            <figure class="classified__media">
-              <img
-                src="https://placehold.co/400x300"
-                alt="Product"
-                class="classified__image"
-              />
-            </figure>
-            <div class="classified__content">
-              <p class="classified__title">New Arrivals</p>
-              <p class="classified__description">
-                The winter collection has arrived. Explore fresh styles and cozy
-                fabrics.
-              </p>
-              <a href="#" class="classified__cta">Shop Collection</a>
-            </div>
-          </div>
-        </aside>
       </main>
     </div>
     <footer class="footer">
